--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -95,6 +95,13 @@
     padding-left: 1.5rem !important;
     padding-right: 1.5rem !important;
   }
+
+  @media (max-width: 420px) {
+    .container {
+      padding-left: 1rem !important;
+      padding-right: 1rem !important;
+    }
+  }
   
   .blog-posts-grid {
     @apply space-y-6;
